@@ -1,3 +1,8 @@
+2004-08-26  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tree.tcl (Tree::delete): call -selectcommand if we delete
+	something that was selected.
+
 2004-08-25  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* statusbar.tcl: correct use of PNG vs. GIF image.
